--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<%= link_to(new_article_path, class: "btn btn-primary btn-new", role: "button", alt:"Make New Article") do %> 
+  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>New Article
+<% end %>
+<div class="row top-buffer">
+  <div class="grid">
+    <% @articles.each do |article| %>
+    <div class="grid-item col-lg-3">
+      <div class="grid-body">
+        <div class="grid-img">
+          <%= image_tag article.picture.url(), class:"img-thumb", data: {toggle:"modal", target:"#imgModal_#{article.id}"} %>
+          <div class="modal modal-img" id="imgModal_<%= article.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <%= image_tag article.picture.url(), class: "img-modal" %>
+            </div>
+          </div>
+        </div>
+        <div class="grid-text">
+          <h3><%= article.title %></h3>
+          <p>
+            <%= article.content.truncate(20) %>
+            <%= link_to 'read more', article_path(article.id), class:"read-more" %>
+          </p>
+          <%= link_to(edit_article_path(article.id), class:"btn btn-default btn-edit") do %>
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit
+          <% end %>
+          <%= link_to(article_path(article.id), method: "DELETE", data: {confirm: 'Delete this data ? '}, class:"btn btn-default btn-delete") do %>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Delete
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
+<script>
+  $('.grid').masonry({
+    itemSelector: '.grid-item',
+  });
+</script>
