modified display previous image, preview image, javascript

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -97,3 +97,12 @@ body {
 .article-img{
   text-align: center;
 }
+.img-previous{
+  width: 50px;
+}
+.img-preview{
+  padding-top: 15px;
+}
+.img-preview img{
+  width: 200px;
+}
