--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -14,6 +14,8 @@
   <div class="form-group">
     <%= f.label :picture %>
     <%= f.file_field :picture %>
+    <div class="img-preview show_form_image">
+    </div>
     <span class="text-danger"><%= @article.errors[:picture].first unless @article.errors[:picture].blank? %></span>
   </div>
   <div class="form-group">
