--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,5 +31,6 @@
         <%= yield %>
       
     </div>
+    <%= javascript_include_tag 'script', 'data-turbolinks-track': 'reload' %>
   </body>
 </html>
