--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -96,6 +96,10 @@ body {
 }
 .article-img{
   text-align: center;
+  padding: 15px 0;
+}
+.article-text{
+  text-align: justify;
 }
 .img-previous{
   width: 50px;
