--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -121,3 +121,9 @@ body {
     background-color: #990000;
     border-color: #ff0000;
 }
+.pagination>.active>a, .pagination>.active>a:focus, 
+.pagination>.active>a:hover, .pagination>.active>span, 
+.pagination>.active>span:focus, .pagination>.active>span:hover{
+  background-color: #990000;
+  border-color: #ff0000;
+}
