--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,16 @@
-<h1 class="article-title"><%= @article.title %></h1>
-<div class="article-img">
-  <%= image_tag @article.picture.url(), class: "img-modal" %>
+<div class="article-content">
+  <h1 class="article-title"><%= @article.title %></h1>
+  <div class="article-img">
+    <%= image_tag @article.picture.url(), class: "img-modal" %>
+  </div>
+  <p class="article-text">
+    <%= @article.content %>
+  </p>
+  <p>
+    <%= link_to 'back to index', articles_path, class: "btn btn-default pull-right" %>
+  </p>
 </div>
-<p class="article-text">
-  <%= @article.content %>
-</p>
-<p>
-  <%= link_to 'back to index', articles_path, class: "btn btn-default pull-right" %>
-</p>
+<div class="form-comment"></div>
+<div class="list-comments">
+  <%= render 'comments' %>
+</div>
