--- a/app/views/articles/_comments.html.erb
+++ b/app/views/articles/_comments.html.erb
@@ -1,6 +1,5 @@
 <% @comments.each do |comment| %>
-<p>
-  <br />
-  <%= comment.content %>
-</p>
+<div class="comment-box">
+  <p><%= comment.content %></p>
+</div>
 <% end %>
