--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,7 +10,9 @@
     <%= link_to 'back to index', articles_path, class: "btn btn-default pull-right" %>
   </p>
 </div>
-<div class="form-comment"></div>
-<div class="list-comments">
+<div class="comment-content">
+<div class="comment-form"></div>
+<div class="comments-list">
   <%= render 'comments' %>
+</div>
 </div>
