add field comment

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,7 +11,9 @@
   </p>
 </div>
 <div class="comment-content">
-<div class="comment-form"></div>
+<div class="comment-form">
+  <%= render 'form' %>
+</div>
 <div class="comments-list">
   <%= render 'comments' %>
 </div>
