--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,46 @@
-<%= form_for @user do |f| %>
-<%= f.label :username %>
-<%= f.text_field :username %>
-<%= @user.errors[:username].first unless @user.errors[:username].blank? %>
-<br/>
-<%= f.label :email %>
-<%= f.text_field :email %>
-<%= @user.errors[:email].first unless @user.errors[:email].blank? %>
-<br/>
-<%= f.label :password %>
-<%= f.password_field :password %>
-<%= @user.errors[:password].first unless @user.errors[:password].blank? %>
-<br/>
-<%= f.label :password_confirmation %>
-<%= f.password_field :password_confirmation %>
-<%= @user.errors[:password_confirmation].first unless @user.errors[:password_confirmation].blank? %>
-<br/>
-<%= f.submit %>
-<% end %>
+<div id="signupbox" class="mainbox col-md-6">
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <div class="panel-title">
+        Sign Up
+      </div>
+    </div>
+    <div class="panel-body" >
+      <%= form_for @user, html: {class: "form-horizontal"} do |f| %>
+      <div class="form-group">
+        <%= f.label :username,  class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.text_field :username, class: "form-control", placeholder: "Username" %>
+          <span class="text-danger"><%= @user.errors[:username].first unless @user.errors[:username].blank? %></span>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :email,  class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.text_field :email, class: "form-control", placeholder: "Email" %>
+          <span class="text-danger"><%= @user.errors[:email].first unless @user.errors[:email].blank? %></span>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :password,  class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+          <span class="text-danger"><%= @user.errors[:password].first unless @user.errors[:password].blank? %></span>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation,  class: "col-md-3 control-label" %>
+        <div class="col-md-9">
+          <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Password Confirmation" %>
+          <span class="text-danger"><%= @user.errors[:password_confirmation].first unless @user.errors[:password_confirmation].blank? %></span>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-md-9 col-md-offset-3 ">
+          <%= f.submit :submit, class: "btn btn-info", value: "Register" %>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
