modifiy for create comment

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,10 +11,12 @@
   </p>
 </div>
 <div class="comment-content">
-<div class="comment-form">
-  <%= render 'form' %>
+<div class="comment-form" id="form-comment">
+  <h5><%= Comment.where(:article_id => @article.id).count %> comment(s)</h5>
+  <%= render 'form_comment' %>
 </div>
-<div class="comments-list">
+<div class="comments-list" id="list-comments">
+  <h4>Here the comments</h4>
   <%= render 'comments' %>
 </div>
 </div>
