--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -134,6 +134,13 @@ body {
 /*Comments*/
 .comment-form {
   padding: 15px 0;
+  border-bottom: 1px solid #00b33c;
+  float: left;
+  width: 100%;
+}
+.comments-list{
+  float: left;
+  width: 100%;
 }
 .comment-content {
   float: left;
@@ -147,16 +154,16 @@ body {
   float: none;
   margin: auto;
 }
-.nav.sign-link .up-link {
-  background: #e60000;
-  color: #fff;
-}
-.nav.sign-link .up-link:hover {
-  background: #ff6666;
-  color: #000;
-}
+/*.nav.sign-link .up-link {
+ background: #e60000;
+ color: #fff;
+ }
+ .nav.sign-link .up-link:hover {
+ background: #ff6666;
+ color: #000;
+ }*/
 .nav.sign-link .in-link {
-  background: #00b359;
+  background: #449d44;
   color: #fff;
 }
 .nav.sign-link .in-link:hover {
@@ -169,13 +176,30 @@ body {
   padding-bottom: 15px;
   float: left;
 }
-.nav.sign-link a{
+.nav.sign-link a {
   float: left;
 }
-.nav.sign-link .out-link{
+.nav.sign-link .out-link {
   color: #4d79ff;
 }
-.nav.sign-link .out-link:hover{
+.nav.sign-link .out-link:hover {
   color: #4d79ff;
+  text-decoration: underline;
+}
+#signinbox .panel-body .form-group {
+  margin-left: 0;
+  margin-right: 0;
+}
+#signinbox .panel-body .form-control {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.border-top {
+  border-top: 1px solid #888;
+  padding-top: 15px;
+}
+.mainbox .up-link {
   text-decoration: underline;
 }
