--- a/app/views/articles/_form_comment.html.erb
+++ b/app/views/articles/_form_comment.html.erb
@@ -1,7 +1,9 @@
 <%= form_for @comment, url: comments_path, remote: true do |f| %>
 <div class="form-group">
   <%= f.hidden_field :article_id, value: @article.id %>
-  <%= f.hidden_field :user_id, value: "1" %>
+  <% if current_user %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
+  <% end %>
   <%= f.text_area :content, rows: 5, class: "form-control" %>
 </div>
 <div class="form-group">
