--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,11 +1,8 @@
 <% if @comment.errors.present? %>
   $("#form-comment").html(" <%= j( render 'articles/form' ) %>");
-  $($(".field_with_errors")[0]).append("
-    <p class = 'message'>
-      <%= escape_javascript( @comment.errors[:content].first ) %>
-    </p>");
 <% else %>
   $("#list-comments").html(" <%= j( render 'articles/comments' ) %>");
+  $("#comments-count").html(" <%= j( render 'articles/count' ) %>");
   $("#comment_content").val('');
   $("div.field_with_errors p.message").remove();
 <% end %>
